# renovels

./: .gitignore  README.md  credentials.json  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 2023-12-30_init.py
src/: __main__.py  config.py  database.py  main.py  models.py
src/auth/: models.py  repository.py  router.py  schemas.py
src/auth/services/: auth.py  user.py
src/post/: models.py
src/utils/: dependencies.py  repository.py  unitofwork.py
tests/: test_main.py
